cmake_minimum_required(VERSION 3.5.1)
project(simple_sort)
set(CMAKE_CXX_STANDARD 11)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB_RECURSE srcs ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp)
foreach(source ${srcs})
  get_filename_component(name ${source} NAME_WE)
  add_executable(${name} ${source})
endforeach(source)
